YelpCamp/v11/readme.md
# Yelp Camp

* Add Landing Page
* Add Campgrounds Page and list all Campgrounds

## Each Campground has

* Name
* Image

## Layout and Basic Styling
* Create our  header and footer Partials
* Add in Bootstrap

## Creating New Campgrounds
* Set up NEW Campground Route
* Add in body-parser
* Setup route to show form
* Add Basic unstyled form

## Style the Campgrounds Page*
* Add a better header/title
* Make Campgrounds display in a grid

## Style the Navbar and Form
* Add a navbar to all templates
* Style the new Caampground form

## Add Mongoose
* Install and Configure Mongoose
* Setup Campground Model
* Use Campground Model inside of our routes

## Refactor Mongoose Code
* Create a Models Directory
* Use Modules.exports
* Require everything Correctly

## Add Seeds File
* Add a seeds.js file
* Run the seeds file every time server starts

## Add Comment Models
* Make our errors go away
* Display comments on show page

## Comment New/Create
* Discuss nested Route
* Add the comment new and create routes
* Add the new comment form

## Style Show Page
* Add Sidebar to show page
* Display Comments Nicely

## finish style show page

* Add Public Directory
* Add custom stylesheet

## Add User Models

* Install all packages needed for auth
* Define User Model

## Auth part-2  -Register

* Configure Passport
* Add Register Route
* Add Register Template

## Auth part-3 Login

* Add Login Route
* Add Login Template

## Auth Part-4 Logout/Navbar

* Add Logout Route
* Prevent User to add a comment if not signed in 
* Add links to Navbar


## Auth Pat-5 Show/Hide Links

* Show/hide auth links correctly

## Refactor the Routes
* Use Express Router to recognize all routes

## Users + Comments

* Associates User Comments
* Save Author name to comment automatically

## Editing Campgrounds
* Add Method-Override
* Add edit route for campgrounds
* Add link to edit page
* Add Update Router
* Fix $set problem

## Delete Campgrounds
* Add Destroy Route
* Add Delete Button

## AuthorizAation
* User Can only his/her edit (or) delete the campgrounds.
* Hide/Show edit and delete buttons

## Editing Comments

* Add Edit Route for Comments
* Add Edit Button
* Add Update Route